--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -3,13 +3,8 @@
 
 name: Python package
 
-
-
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  workflow_dispatch:
 
 env:
   openaikey: ${{ secrets.OPENAIKEY }}
