--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,6 +27,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        python -m pip install openai==0.28
+        python -m pip install pinecone-client
         
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     
